[package]
name = "sd-image-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.10"
clap = { version = "4.1.8", features = ["derive"] }
maud = { git = "https://github.com/lambda-fairy/maud", features = ["axum"] }
tokio = { version = "1.26.0", features = ["full"] }
tower-http = { version = "0.4.0", features = ["fs"] }
